Fix moving selection with the magnetic selection tool

BUG:433633